#4 - fixed image upload